<resources>
    <string name="app_name">TalentAcquisition</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>
    <string name="textview1">Android Developer</string>
    <string name="textview2">Description</string>
    <string name="textview3">We are looking for an android developer who possesses a passion for pushing mobile technologies
    to the limits and will work with our team of talented engineers to design and build the next generation of our mobile applications
    </string>
    <string name="textview4">Location</string>
    <string name="textview5">Bangalore,Pune</string>
    <string name="textview6">Salary range</string>
    <string name="textview7">5,00,000</string>
    <string name="textview8">Windows developer</string>
    <string name="textview9">0-2years XP </string>
    <string name="textview10">Apply</string>
    <string name="textview11">Android Developer</string>
    <string name="textview12">0-2years XP|Bangalore</string>
    <string name="textview13">UI/UX Designer</string>
    <string name="textview14">5-7years XP|New Delhi</string>
    <string name="textview15">Evaluated</string>
    <string name="textview16">Web Developer</string>
    <string name="textview17">3-4years XP|Bangalore</string>
    <string name="textview18">Shortlisted</string>
    <string name="textview19">2-3years XP|Mumbai</string>
    <string name="textview20">On Hold</string>
    <string name="textview21">Rejected</string>
    <string name="textview22">Solution Architect</string>


    <string name="apply">Apply</string>
<string name="text1">android developer,bangalore</string>
    <string name="text2">ios developer,bangalore</string>
    <string name="text3">web developer,pune</string>
    <string name="text4">web developer,bangalore</string>
    <string name="text5">FORWARD TO</string>
    <string name="cardtext1">Android Developer</string>
    <string name="cardtext2">DESCRIPTION</string>
    <string name="cardtext3">We are looking for an android developer who possesses a passion for pushing mobile technologies
    to the limits and will work with our team of talented engineers to design and build the next generation of our mobile applications</string>
<string name="cardtext4">LOCATION</string>
    <string name="cardtext5">Bangalore,Pune</string>
    <string name="cardtext6">SALARY RANGE</string>
    <string name="cardtext7">5,00,000</string>
    <string name="buttontext">Forward</string>
    <string name="searchtext1">Function</string>
    <string name="searchtext2">Vertical</string>
    <string name="searchtext3">Job Title</string>
    <string name="searchtext4">Experience</string>
    <string name="searchtext5">Country</string>
    <string name="searchtext6">Salary Range</string>

    <string name="function_prompt">Choose a function</string>
    <string-array name="function_array">
        <item name="item1">IT</item>
        <item name="item2">HR</item>
        <item name="item3">Sales</item>
        <item name="item4">Finance</item>
    </string-array>

    <string name="vertical_prompt">Choose a vertical</string>
    <string-array name="vertical_array">
        <item name="item1">Construction</item>
        <item name="item2">Automotive</item>
        <item name="item3">Infotech</item>

    </string-array>
    <string name="title_prompt">Choose a job post</string>
    <string-array name="title_array">
        <item name="item1">Android Developer</item>
        <item name="item2">Web Developer</item>
        <item name="item3">Project Manager</item>
        <item name="item4">Java Developer</item>
    </string-array>
    <string name="exp_prompt">Choose</string>
    <string-array name="exp_array">
        <item name="item1">1-4years</item>
        <item name="item2">4-6years</item>
        <item name="item2">6-8years</item>
        <item name="item2">8-12years</item>
    </string-array>
    <string name="country_prompt">Choose a location</string>
    <string-array name="country_array">
        <item name="item1">India</item>
        <item name="item2">South America</item>
        <item name="item3">Russia</item>
        <item name="item4">Canada</item>
    </string-array>
    <string name="salary_prompt1">Choose salary range</string>
    <string-array name="salary_array1">
        <item name="item1">3,00,000</item>
        <item name="item2">4,00,000</item>
        <item name="item3">5,00,000</item>
        <item name="item4">6,00,000</item>
    </string-array>

    <string name="salary_prompt2">Choose salary range</string>
    <string-array name="salary_array2">
        <item name="item1">6,00,000</item>
        <item name="item2">7,00,000</item>
        <item name="item3">8,00,000</item>
        <item name="item4">9,00,000</item>
    </string-array>

    <string name="filtertext1">Location</string>
    <string name="filtertext2">Job title</string>

    <string name="location_prompt">Choose salary range</string>
    <string-array name="location_array">
        <item name="item1">Bangalore</item>
        <item name="item2">Delhi</item>
        <item name="item3">Rajasthan</item>
        <item name="item4">Chennai</item>
    </string-array>

    <string name="req_prompt1">Choose salary range</string>
    <string-array name="req_array1">
        <item name="item1">Android Developer</item>
        <item name="item2">Web Developer</item>
        <item name="item3">Talent Executive</item>
        <item name="item4">UI Designer</item>
    </string-array>

    <string name="reqtext1">We are looking for an android developer who possesses a passion for pushing mobile technologies
    to the limits and will work with our team of talented engineers to design and build the next generation of our mobile applications
    </string>

    <string name="locationtext2">Position</string>
    <string name="position_prompt">Choose salary range</string>
    <string-array name="position_array">
        <item name="item1">Budgeted</item>
        <item name="item2">Web Developer</item>
        <item name="item3">Talent Executive</item>
        <item name="item4">UI Designer</item>
    </string-array>

    <string name="requesttext3">Target date</string>

    <string name="reqtext2">Recruiter</string>

    <string name="req_prompt2">Recruiter</string>
    <string-array name="req_array2">
        <item name="item1">Sampada</item>
        <item name="item2">Upasana</item>
        <item name="item3">Karthik</item>
        <item name="item4">Abhilash</item>
    </string-array>


    <string name="Currentdate">current date</string>

    <string name="attachtext1">Resume</string>
    <string name="attachtext2">CV</string>

    <string-array name="resume_array">
        <item name="item1">Resume.docx</item>

    </string-array>

    <string-array name="cv_array">
        <item name="item1">CV.docx</item>

    </string-array>




</resources>
