<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        layout="@layout/tool_bar"/>

    <TextView
        android:id="@+id/tv13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:layout_margin="8dp"
        android:padding="2dp"/>

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_margin="8dp"
        android:hint="Enter email-id"
        android:padding="2dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        app:cardElevation="15dp"
        android:layout_margin="8dp"
        >
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ct1"
                android:layout_alignParentTop="true"
                android:textSize="22sp"
                android:textColor="#000"
                android:text="@string/cardtext1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ct2"
                android:layout_below="@+id/ct1"
                android:layout_marginTop="10dp"
                android:text="@string/cardtext2"
                android:textSize="18sp"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ct3"
                android:layout_below="@+id/ct2"
                android:layout_marginTop="5dp"
                android:text="@string/cardtext3"
                android:textSize="15sp"
                android:padding="2dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_below="@+id/rl1"
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ct4"
                android:textSize="18sp"
                android:text="@string/cardtext4"
                android:padding="2dp"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ct5"
                    android:layout_below="@+id/ct4"
                    android:layout_marginTop="2dp"
                    android:text="@string/cardtext5"
                    android:textSize="15sp"
                    android:padding="2dp"/>


</RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_below="@+id/rl2"
            android:layout_marginTop="280dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ct6"
                android:textSize="18sp"
                android:text="@string/cardtext6"
                android:padding="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ct7"
                android:layout_below="@+id/ct6"
                android:layout_marginTop="2dp"
                android:text="@string/cardtext7"
                android:textSize="15sp"
                android:padding="2dp"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:layout_margin="20dp"
    android:layout_gravity="center"
    android:layout_marginTop="2dp"
    android:text="@string/buttontext"
    android:textColor="#fff"
    android:background="@color/PrimaryDarkColor"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    />


</LinearLayout>
</ScrollView>