<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android= "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        layout="@layout/tool_bar"
        android:id="@+id/tool1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchtv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchtext1"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/cv1"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/function_array"
            android:prompt="@string/function_prompt"
            >
        </Spinner>

</android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
    android:id="@+id/lin2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/searchtv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchtext2"
        android:textColor="#000"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_margin="5dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/cv2"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:entries="@array/vertical_array"
        android:prompt="@string/vertical_prompt"
        >
    </Spinner>
        </android.support.v7.widget.CardView>



</LinearLayout>

    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchtv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchtext3"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/cv3"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/title_array"
            android:prompt="@string/title_prompt"
            >

        </Spinner>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchtv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchtext4"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/cv4"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/exp_array"
            android:prompt="@string/exp_prompt"
            >

        </Spinner>
</android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchtv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchtext5"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/cv5"
            app:cardElevation="4dp"
            android:layout_margin="10dp"
            >

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/country_array"
            android:prompt="@string/country_prompt"
            >

        </Spinner>
</android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/searchtv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchtext6"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/cv6"
            app:cardElevation="4dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            >
        <Spinner
            android:id="@+id/spinner6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/salary_array1"
            android:prompt="@string/salary_prompt1"
            >
            </Spinner>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/cv7"
            app:cardElevation="4dp"
            android:layout_weight="1"
            android:layout_margin="10dp"

            >
            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/salary_array2"
                android:prompt="@string/salary_prompt2"
                >

            </Spinner>

        </android.support.v7.widget.CardView>

        </LinearLayout>

            <Button
                android:id="@+id/searchbutton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/AccentColor"
                android:layout_gravity="center"
                android:textColor="#fff"
                />
</LinearLayout>
    </ScrollView>
    </LinearLayout>




