<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <include
        layout="@layout/tool_bar"
        android:id="@+id/tool1"/>


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/attachtv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attachtext1"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/acv1"
            app:cardElevation="10dp"
            android:layout_margin="10dp"
            >

            <Spinner
                android:id="@+id/sp1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/resume_array"
                android:prompt="@string/location_prompt"
                >
            </Spinner>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/attachtv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attachtext2"
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_margin="5dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/acv2"
            app:cardElevation="10dp"
            android:layout_margin="10dp"
            >

            <Spinner
                android:id="@+id/sp2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/cv_array"
                android:prompt="@string/location_prompt"
                >
            </Spinner>

        </android.support.v7.widget.CardView>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >



    <Button
        android:id="@+id/applybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="APPLY"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/PrimaryDarkColor"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
</LinearLayout>